# kitsain

./: .bash  .coveragerc  .gitignore  .pylintrc  Dockerfile  LICENSE  README.md  codecov.yml  docker-compose.yml  pyproject.toml  testing.py
.github/ISSUE_TEMPLATE/: user-story-template.md
.github/workflows/: main.yml
documentation/: bad_recipes_generated.md  dod.md  restapidocs.md
documentation/customermeetings/: agenda7_2.md  agendas.md  meetingnotes.md  template.md
kitsain_backend/: manage.py
kitsain_backend/kitsain_backend/: settings.py
src/: api_connection.py  app.py  backend.py  config.py  db.py  db_connection.py  frontend.json  main.py  manage.py  openai_api_connection.py  openai_test.py  pantry.csv  recipes.txt  request_file.py  routes.py  schema.sql
src/backend/: settings.py  urls.py
src/backend/backend/: models.py  serializers.py  views.py
src/backend/migrations/: 0001_initial.py
src/entities/: entities.py  recipe.py
src/finetuning/: recipe-context.jsonl
src/kitsain_backend/kitsain_backend/: asgi.py  urls.py  wsgi.py
src/repositories/: pantry_repository.py
src/services/: file_handler.py  openai_service.py  pantry_service.py  recipe_service.py
src/templates/: generate_recipe.html  recipe.html  view_recipes.html
src/testing_cli/: api_connection.py  main.py
src/tests/: mock_openai.py  test_app.py  test_openai_api_connection.py  test_openai_service.py
