[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.7.2"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
flask = "^3.0.1"
flask-sqlalchemy = "^3.1.1"
psycopg2-binary = "^2.9.9"
blinker = "^1.7.0"
jinja2 = "^3.1.3"
sqlalchemy = "^2.0.25"
werkzeug = "^3.0.1"


[tool.poetry.group.dev.dependencies]
pylint = "^3.0.3"
autopep8 = "^2.0.4"
pytest = "^7.4.4"
coverage = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
